# RoboSub_2026

./: LICENSE  README.md
.devcontainer/: .devcontainer.json  Docker-compose.yaml  Dockerfile  devcontainer.json
Proteus/: Proteus_Flowchart.drawio  README.md  Robot_Flowchart.drawio  Untitled Diagram.drawio
Proteus/Control_Freak/: README.md
Proteus/Navionics/: README.md
install/: local_setup.sh  setup.sh
install/mpu6500_ros/lib/mpu6500_ros/: mpu6500_publisher
install/mpu6500_ros/share/mpu6500_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mpu6500_ros/share/mpu6500_ros/launch/: mpu6500_launch.py
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
install/turtlesim/share/turtlesim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlesim/share/turtlesim/action/: RotateAbsolute.action  RotateAbsolute.idl
install/turtlesim/share/turtlesim/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  (+3 more)
log/: latest_build  latest_list
src/mpu500/example/: default_basic_example.c  driver_mpu6500_basic.c  driver_mpu6500_basic.h
src/mpu500/src/: driver_mpu6500.c
src/mpu6500_ros/: CMakeLists.txt
src/mpu6500_ros/launch/: mpu6500_with_filter.launch.py
src/mpu6500_ros/src/: mpu6500_publisher.cpp
(+169 files in other folders)
